# synpack

./: Cargo.toml  README.md  synpack.pl  template.rs  template.toml
src/: main.rs
