[package]
name = "synpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.51"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
cbc = "0.1.2"
aes = "0.8.3"
clroxide = "1.1.1"
reqwest = { version = "0.11.20", features = ["multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.4.0"
futures-util = "0.3.26"
